[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/MainMenu/ .gd" type="Script" id=1]
[ext_resource path="res://Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
extra_spacing_char = 6
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 23
extra_spacing_bottom = -1
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 23
extra_spacing_top = -1
extra_spacing_bottom = -1
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 23
extra_spacing_top = -1
extra_spacing_bottom = -1
extra_spacing_char = 3
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -190.0
margin_top = 121.0
margin_right = 78.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 410.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Assembler Exemplar"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -34.0
margin_right = 134.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 267.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Start"
flat = true

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 267.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 3 )
text = "Options"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 267.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
flat = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
